# LauzHack2016

./: .cproject  .gitignore  .gitignore~  .project  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md
lib_win64/: README.md
src/: calibrate.cpp  calibrate.h  calibrateColors.cpp  colour.cpp  keyToFinger.cpp  main.cpp  main.cpp~  megaheader.h
src/keyboard/: Flasher.cpp  Flasher.h  Key.h
